fix html element sizes so they don't do weird overlaps

--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,8 @@
 }
 
 html {
-    height: 300%;
-    background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%)
+    height: 3140px;
+    background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
 }
 
 .foreground{
@@ -37,19 +37,7 @@ html {
     left: 0;
     width: 100%;
     z-index: -1;
-}
-
-.container {
-    position: relative;
-    top: 0px;
-    left: 0px;
-    height: 300vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    gap: 5vh;
+    overflow: hidden;
 }
 
 #title{
@@ -66,6 +54,7 @@ html {
     font-family: Lato;
     font-weight: 300;
     font-size: 50px;
+    z-index: 2;
 }
 
 #title span {
@@ -73,6 +62,19 @@ html {
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+.container {
+    position: relative;
+    top: 0px;
+    left: 0px;
+    height: 3000px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 5vh;
 }
 
 .wrapper {
@@ -90,6 +92,6 @@ html {
     width: 70vw;
     min-height: 600px;
     min-width: 1200px;
-    background-color: var(--color-primary-1);
+    background-color: var(--color-black-0);
 }
 
