--- a/styles_stars.css
+++ b/styles_stars.css
@@ -1,7 +1,7 @@
 #starWrapper{
     overflow: hidden;
     height: 300vh;
-    min-height: 3000px;
+    min-height: 3140px;
 }
 
 #stars {
